# bazel-sample

./: .gitignore
basic/: BUILD.bazel  WORKSPACE  deps.bzl  go.mod
basic/cmd/: BUILD.bazel
basic/uuid/: BUILD.bazel
docker/: .bazelrc  BUILD.bazel  Makefile  WORKSPACE  go.mod  go.sum
docker-go-image/: BUILD.bazel  WORKSPACE  go.mod
docker-go-image/cmd/: BUILD.bazel  main.go
docker-go-image/uuid/: BUILD.bazel
docker/cmd/: BUILD.bazel  main.go
docker/uuid/: BUILD.bazel
gogoproto/: BUILD.bazel  Makefile  WORKSPACE
gogoproto/proto/: BUILD.bazel  address.pb.go  address.proto  user.pb.go  user.proto  zipcode.pb.go  zipcode.proto
grpc/: BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  repositories.bzl
grpc/client/: BUILD.bazel  main.go
grpc/proto/: BUILD.bazel  helloworld.pb.go  helloworld.proto
grpc/server/: BUILD.bazel  main.go
ldflags/: .bazelrc  BUILD.bazel  Makefile  go.mod  tag.sh
ldflags/alive/: BUILD.bazel  alive.go
ldflags/cmd/: BUILD.bazel  main.go
protobuf/: BUILD.bazel  Makefile  WORKSPACE
protobuf/proto/: BUILD.bazel  address.proto  user.proto  zipcode.proto
remote-cache/: .bazelrc  BUILD.bazel  deps.bzl  go.mod
remote-cache/client/: BUILD.bazel  main.go
remote-cache/proto/: BUILD.bazel  helloworld.pb.go  helloworld.proto
remote-cache/server/: BUILD.bazel  main.go
test/: .bazelrc  BUILD.bazel  Makefile  WORKSPACE  coverage.out  deps.bzl  docker-compose.yml  go.mod  go.sum
test/dice/: BUILD.bazel  dice.go  dice_integration_test.go  dice_test.go  test1.yaml
test/dice/testdata/: test2.yaml
testfile/: BUILD.bazel  WORKSPACE  go.mod  go.sum
testfile/fizzbuzz/: BUILD.bazel  fizzbuzz.go  fizzbuzz_test.go
testfile/fizzbuzz2/: BUILD.bazel  fizzbuzz.go  fizzbuzz_test.go
