load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_image(
    name = "image",
    srcs = ["main.go"],
    importpath = "github.com/jun06t/bazel-sample/docker-go-image/cmd",
    visibility = ["//visibility:private"],
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "jun06t/bazel-sample-cmd",
    tag = "go_image",
)
