load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/jun06t/bazel-sample/ldflags/cmd",
    visibility = ["//visibility:private"],
    deps = ["//alive"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
#    x_defs = {
#        "github.com/jun06t/bazel-sample/ldflags/alive.BuildVersion": "{GIT_COMMIT}",
#        "github.com/jun06t/bazel-sample/ldflags/alive.Timestamp": "{DATE}",
#    },
)
